--- a/pom.xml
+++ b/pom.xml
@@ -7,23 +7,58 @@
   <groupId>vsb.gai0010</groupId>
   <artifactId>orders</artifactId>
   <version>1.0</version>
+  <packaging>war</packaging>
 
-  <name>orders</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>${project.artifactId}</name>
 
   <properties>
+<!--    Project properties-->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+
+<!--    Dependencies properties-->
+    <project.junit.version>4.13.2</project.junit.version>
+    <project.lombok.version>1.18.24</project.lombok.version>
+    <project.log4j2.version>2.17.2</project.log4j2.version>
+    <project.jdbc.version>21.5.0.0</project.jdbc.version>
+
+<!--    Plugins properties-->
+    <project.war.version>3.3.2</project.war.version>
   </properties>
 
   <dependencies>
+<!--    Junit-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>${project.junit.version}</version>
       <scope>test</scope>
+    </dependency>
+<!--    Lombok-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${project.lombok.version}</version>
+      <scope>provided</scope>
+    </dependency>
+<!--    Log4j2-->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>${project.log4j2.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>${project.log4j2.version}</version>
+    </dependency>
+<!--    Database driver-->
+    <dependency>
+      <groupId>com.oracle.database.jdbc</groupId>
+      <artifactId>ojdbc11</artifactId>
+      <version>${project.jdbc.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -71,5 +106,12 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>${project.war.version}</version>
+      </plugin>
+    </plugins>
   </build>
 </project>
