--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,17 +14,27 @@
     <servlet-name>login</servlet-name>
     <servlet-class>vsb.gai0010.servlet.LoginServlet</servlet-class>
   </servlet>
-  <servlet>
-    <servlet-name>logout</servlet-name>
-    <servlet-class>vsb.gai0010.servlet.LogoutServlet</servlet-class>
-  </servlet>
-
   <servlet-mapping>
     <servlet-name>login</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>logout</servlet-name>
+    <servlet-class>vsb.gai0010.servlet.LogoutServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>logout</servlet-name>
     <url-pattern>/logout</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>updateOrder</servlet-name>
+    <servlet-class>vsb.gai0010.servlet.UpdateOrderServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>updateOrder</servlet-name>
+    <url-pattern>/updateOrder</url-pattern>
+  </servlet-mapping>
+
 </web-app>
